--- a/projects.json
+++ b/projects.json
@@ -1,1 +1,5 @@
-[{"name":"KMEHR", "folder": "KMEHRMS"},{"name":"UNICOM", "folder": "UNICOM"}]
+[
+  {"name":"KMEHR", "folder": "KMEHRMS"},
+  {"name":"UNICOM", "folder": "UNICOM"},
+  {"name":"HIV", "folder": "HIV"}
+]
